--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,18 @@
     </dependencies>
     <build>
         <plugins>
+        <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+      <archive>
+        <manifest>
+        <mainClass>MainApp.App</mainClass>
+        </manifest>
+      </archive>
+    </configuration>
+    </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
